# sphinx-mcq

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/sphinx_mcq/: __init__.py  addnodes.py  builder.py  transforms.py
src/sphinx_mcq/assets/: mcq-styles.css
tests/: conftest.py  test_build_html.py  test_mcq.py
tests/examples/test_mcq/: conf.py  index.rst
